[package]
  name = "typenum"
  build = "build/main.rs"
  version = "1.13.0"
  authors = [
    "Paho Lurie-Gregg <paho@paholg.com>",
    "Andre Bogus <bogusandre@gmail.com>"
  ]
  documentation = "https://docs.rs/typenum"
  repository = "https://github.com/paholg/typenum"
  readme = "README.md"
  license = "MIT OR Apache-2.0"
  description = "Typenum is a Rust library for type-level numbers evaluated at
    compile time. It currently supports bits, unsigned integers, and signed
    integers. It also provides a type-level array of type-level numbers, but its
    implementation is incomplete."
  categories = ["no-std"]
  edition = "2018"

[lib]
  name = "typenum"

[features]
  no_std = []
  i128 = []
  strict = []
  force_unix_path_separator = []
