[package]
  name = "typenum"
  build = "build/main.rs"
  version = "1.16.0" # remember to update html_root_url
  authors = [
    "Paho Lurie-Gregg <paho@paholg.com>",
    "Andre Bogus <bogusandre@gmail.com>"
  ]
  documentation = "https://docs.rs/typenum"
  repository = "https://github.com/paholg/typenum"
  readme = "README.md"
  license = "MIT OR Apache-2.0"
  description = """Typenum is a Rust library for type-level numbers evaluated at
    compile time. It currently supports bits, unsigned integers, and signed
    integers. It also provides a type-level array of type-level numbers, but its
    implementation is incomplete."""
  categories = ["no-std"]
  edition = "2018"
  rust-version = "1.37.0"

[dependencies]
scale-codec = { package = "parity-scale-codec", version = "3.2", default-features = false, features = ["derive", "max-encoded-len"], optional = true }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

[lib]
  name = "typenum"

[features]
  no_std = []
  i128 = []
  strict = []
  force_unix_path_separator = []
  const-generics = []
  scale = ["scale-codec", "scale-info"]
